hphp/test/zend/good/Zend/tests/array_unshift_COW.php
<?php
	$a=array();
	$b=1;
	$c=&$b;
	array_unshift ($a,$b);
	$b=2;
	var_dump ($a);
?>